--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
   <title>MyApp</title>
   <base href="/">
 
+  <!--Material icon pack-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
